--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -960,7 +960,6 @@ geom_histogram(binwidth = 25)+
   facet_wrap(~wshed)
 ```
 I did this, but I think we have decided to remove it
-
 ## Instead of duration of flow- number of transitions
 ```{r figuring-out-nt}
 bind23 <- data_23 %>% 
@@ -1020,7 +1019,6 @@ bind24 %>%
      ggplot(aes(x = datetime, y = binary))+
      geom_tile()
 ```
-
 ```{r nt-w3}
 duration23 <- bind23 %>% 
   filter(wshed == "W3", mins %in% c(0, 30)) %>% 
@@ -1276,8 +1274,7 @@ nt_zz <- rbind(zz_nt_23, zz_nt_24) %>%
   summarise(avg_nt = mean(proportion))%>% 
   mutate(wshed = "ZZ")
 ```
-
-```{r}
+```{r boxplot}
 rbind(nt_w3, nt_fb, nt_zz) %>% 
   ggplot(aes(x = wshed, y = (avg_nt)))+
   geom_boxplot()+
@@ -1286,6 +1283,202 @@ rbind(nt_w3, nt_fb, nt_zz) %>%
   labs(title = "Distributions of the Number of Transitions",
        x = "Watershed",
        y = "NT normalized by duration of observation")
+```
+
+Add tpi and twi
+##tpi and twi
+```{r locs-from-arc}
+#get snapped sensor locations from extracted values from arc
+w3_locs <- read_csv("./STIC_uaa/w32.csv")%>% 
+  select(ID, POINT_X, POINT_Y)
+fb_locs <- read_csv("./STIC_uaa/fb2.csv") %>% 
+  select(ID, POINT_X, POINT_Y)
+zz_locs <- read_csv("./STIC_uaa/zz1.csv")%>% 
+  select(ID, POINT_X, POINT_Y)
+```
+```{r tpi-W3}
+#flow accumulation/upslope drainage area at 3 m resolution calculated earlier in markdown
+flowacc_output <- "./HB/1m hydro enforced DEM/dem3m_flowacc.tif"
+
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(w3_locs, 
+                   geom=c("POINT_X", "POINT_Y"), 
+                   crs = crs(rast(flowacc_output))) #set crs to NAD 83
+
+#calculate 10m DEM, then breach and fill
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+m10 <- aggregate(m1, 10)
+#save raster, because whitebox wants it is a files location instead of an object in R
+writeRaster(m10, "./w3_dems/10mdem.tif", overwrite = TRUE)
+
+
+breach_output <- "./w3_dems/10mdem_breach.tif"
+wbt_breach_depressions_least_cost(
+  dem = "./w3_dems/10mdem.tif",
+  output = breach_output,
+  dist = 10,
+  fill = TRUE)
+
+fill_output <- "./w3_dems/10mdem_fill.tif"
+wbt_fill_depressions_wang_and_liu(
+  dem = breach_output,
+  output = fill_output
+)
+
+#flow accumulation/drainage area
+flowacc_output <- "./w3_dems/10mdem_flowacc.tif"
+wbt_d_inf_flow_accumulation(input = fill_output,
+                            output = flowacc_output,
+                            out_type = "Specific Contributing Area")
+#Slope
+slope_output <- "./w3_dems/10mdem_slope.tif"
+wbt_slope(dem = fill_output,
+          output = slope_output,
+          units = "degrees")
+#calculate TPI
+tpi_output <- "./w3_dems/10mdem_tpi.tif"
+wbt_relative_topographic_position(
+    dem = fill_output, 
+    output = tpi_output, 
+    filterx=11, 
+    filtery=11)
+#TWI
+twi_output <- "./w3_dems/10mdem_twi.tif"
+wbt_wetness_index(sca = flowacc_output, #flow accumulation
+                  slope = slope_output,
+                  output = twi_output)
+
+w3_tpi <- extract(rast(tpi_output), locs_shape, ID = FALSE, bind = TRUE) %>% 
+  rename("tpi" = `10mdem_tpi`) %>% 
+  as_tibble()
+
+w3_twi <- extract(rast(twi_output), locs_shape, ID = FALSE, bind = TRUE) %>% 
+  rename("twi" = `10mdem_twi`) %>% 
+  as_tibble()
+
+```
+```{r tpi-fb}
+#flow accumulation/upslope drainage area at 3 m resolution calculated earlier in markdown
+flowacc_output <- "./HB/1m hydro enforced DEM/dem3m_flowacc.tif"
+
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(fb_locs, 
+                   geom=c("POINT_X", "POINT_Y"), 
+                   crs = crs(rast(flowacc_output))) #set crs to NAD 83
+
+#calculate 10m DEM, then breach and fill
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+m10 <- aggregate(m1, 10)
+#save raster, because whitebox wants it is a files location instead of an object in R
+writeRaster(m10, "./w3_dems/10mdem.tif", overwrite = TRUE)
+
+
+breach_output <- "./w3_dems/10mdem_breach.tif"
+wbt_breach_depressions_least_cost(
+  dem = "./w3_dems/10mdem.tif",
+  output = breach_output,
+  dist = 10,
+  fill = TRUE)
+
+fill_output <- "./w3_dems/10mdem_fill.tif"
+wbt_fill_depressions_wang_and_liu(
+  dem = breach_output,
+  output = fill_output
+)
+
+#flow accumulation/drainage area
+flowacc_output <- "./w3_dems/10mdem_flowacc.tif"
+wbt_d_inf_flow_accumulation(input = fill_output,
+                            output = flowacc_output,
+                            out_type = "Specific Contributing Area")
+#Slope
+slope_output <- "./w3_dems/10mdem_slope.tif"
+wbt_slope(dem = fill_output,
+          output = slope_output,
+          units = "degrees")
+#calculate TPI
+tpi_output <- "./w3_dems/10mdem_tpi.tif"
+wbt_relative_topographic_position(
+    dem = fill_output, 
+    output = tpi_output, 
+    filterx=11, 
+    filtery=11)
+#TWI
+twi_output <- "./w3_dems/10mdem_twi.tif"
+wbt_wetness_index(sca = flowacc_output, #flow accumulation
+                  slope = slope_output,
+                  output = twi_output)
+
+fb_tpi <- extract(rast(tpi_output), locs_shape, ID = FALSE, bind = TRUE) %>% 
+  rename("tpi" = `10mdem_tpi`) %>% 
+  as_tibble()
+
+fb_twi <- extract(rast(twi_output), locs_shape, ID = FALSE, bind = TRUE) %>% 
+  rename("twi" = `10mdem_twi`) %>% 
+  as_tibble()
+```
+```{r tpi-zz}
+#flow accumulation/upslope drainage area at 3 m resolution calculated earlier in markdown
+flowacc_output <- "./HB/1m hydro enforced DEM/dem3m_flowacc.tif"
+
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(zz_locs, 
+                   geom=c("POINT_X", "POINT_Y"), 
+                   crs = crs(rast(flowacc_output))) #set crs to NAD 83
+
+#calculate 10m DEM, then breach and fill
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+m10 <- aggregate(m1, 10)
+#save raster, because whitebox wants it is a files location instead of an object in R
+writeRaster(m10, "./w3_dems/10mdem.tif", overwrite = TRUE)
+
+
+breach_output <- "./w3_dems/10mdem_breach.tif"
+wbt_breach_depressions_least_cost(
+  dem = "./w3_dems/10mdem.tif",
+  output = breach_output,
+  dist = 10,
+  fill = TRUE)
+
+fill_output <- "./w3_dems/10mdem_fill.tif"
+wbt_fill_depressions_wang_and_liu(
+  dem = breach_output,
+  output = fill_output
+)
+
+#flow accumulation/drainage area
+flowacc_output <- "./w3_dems/10mdem_flowacc.tif"
+wbt_d_inf_flow_accumulation(input = fill_output,
+                            output = flowacc_output,
+                            out_type = "Specific Contributing Area")
+#Slope
+slope_output <- "./w3_dems/10mdem_slope.tif"
+wbt_slope(dem = fill_output,
+          output = slope_output,
+          units = "degrees")
+#calculate TPI
+tpi_output <- "./w3_dems/10mdem_tpi.tif"
+wbt_relative_topographic_position(
+    dem = fill_output, 
+    output = tpi_output, 
+    filterx=11, 
+    filtery=11)
+#TWI
+twi_output <- "./w3_dems/10mdem_twi.tif"
+wbt_wetness_index(sca = flowacc_output, #flow accumulation
+                  slope = slope_output,
+                  output = twi_output)
+
+zz_tpi <- extract(rast(tpi_output), locs_shape, ID = FALSE, bind = TRUE) %>% 
+  rename("tpi" = `10mdem_tpi`) %>% 
+  as_tibble()
+
+zz_twi <- extract(rast(twi_output), locs_shape, ID = FALSE, bind = TRUE) %>% 
+  rename("twi" = `10mdem_twi`) %>% 
+  as_tibble()
 ```
 
 
@@ -2230,6 +2423,76 @@ all_uaa <- rbind(fantastic_four(routes_w3, "W3"),
 write_csv(all_uaa, "./hierarchy_analysis_results/drainageArea.csv")
 ```
 
+```{r topographic-position-index}
+# fb_uaa_1m <- read_csv("./STIC_uaa/fb2.csv")
+# zz_uaa_1m <- read_csv("./STIC_uaa/zz2.csv")
+# w3_uaa_1m <- read_csv("./STIC_uaa/w32.csv")
+
+routes_w3 <- w3_tpi %>% 
+    filter(ID %in% W3_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(tpi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+routes_fb <- fb_tpi %>% 
+    filter(ID %in% FB_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(tpi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down)
+
+routes_zz <- zz_tpi %>% 
+    filter(ID %in% ZZ_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(tpi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+all_tpi <- rbind(fantastic_four(routes_w3, "W3"),
+                 fantastic_four(routes_fb, "FB"),
+                 fantastic_four(routes_zz, "ZZ")) %>% 
+  mutate("hierarchy" = "Topographic Position Index")
+
+write_csv(all_tpi, "./hierarchy_analysis_results/tpi.csv")
+```
+```{r topographic-wetness-index}
+routes_w3 <- w3_twi %>% 
+    filter(ID %in% W3_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(twi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+routes_fb <- fb_twi %>% 
+    filter(ID %in% FB_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(twi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down)
+
+routes_zz <- zz_twi %>% 
+    filter(ID %in% ZZ_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(twi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+all_twi <- rbind(fantastic_four(routes_w3, "W3"),
+                 fantastic_four(routes_fb, "FB"),
+                 fantastic_four(routes_zz, "ZZ")) %>% 
+  mutate("hierarchy" = "Topographic Wetness Index")
+
+write_csv(all_twi, "./hierarchy_analysis_results/twi.csv")
+```
+
+
 ##looping by drainage area UNFINISHED
 Lost in a file hell
 ```{r create-3m-network}
@@ -2591,19 +2854,22 @@ all_uaa <- read_csv("./hierarchy_analysis_results/drainageArea.csv")
 
 sults_so_far <- rbind(all_position,
                       all_pk,
-                      all_nt,
-                      all_uaa#,
-                      #random_w3
+                      #all_nt,
+                      all_uaa,
+                      all_tpi,
+                      all_twi
                       ) %>% 
   mutate(timescale = fct_relevel(timescale,
                               c("30mins", "hourly", "4hr", "daily")),
          hierarchy = as.factor(str_trim(as.character(hierarchy))),
          
          hierarchy = fct_relevel(hierarchy, 
-                                 c("Duration of Flow",
+                                 c(
                                 "Flow Permanence",
                                 "Relative Position",
-                                "Drainage Area")))#,
+                                "Drainage Area",
+                                "Topographic Position Index",
+                                "Topographic Wetness Index")))#,
                                 #"Random")))
 sults_so_far %>% 
   ggplot(aes(x = shed, y = prop, color = hierarchy)) +
@@ -2747,6 +3013,8 @@ geom_density(alpha = 0.5)+
                      name = "Watershed")+
   facet_wrap(~hierarchy)
 
+#FINAL DENSITY PLOTS
+
 sults_so_far %>% 
   filter(timescale %in% c("4hr", "daily")) %>% 
   ggplot(aes(x = prop, y = after_stat(density))) +
@@ -2754,6 +3022,8 @@ geom_density(aes(fill = shed, color = shed), alpha = 0.5)+
     geom_density(alpha = 0.5, lty = 3)+
       geom_vline(xintercept = 0.5, lty = 2, alpha = 0.5)+
     theme_bw()+
+  ylim(c(0, 3))+
+  xlim(c(0,1))+
   labs(title = "Distributions of Proportion of time Hiearchies Followed",
        x = "Proportion of time followed",
        y = "Density")+
@@ -2772,6 +3042,8 @@ geom_density(aes(fill = shed, color = shed), alpha = 0.5)+
     geom_density(alpha = 0.5, lty = 3)+
       geom_vline(xintercept = 0.5, lty = 2, alpha = 0.5)+
     theme_bw()+
+  ylim(c(0, 3))+
+  xlim(c(0,1))+
   labs(title = "Distributions of Proportion of time Hiearchies Followed",
        x = "Proportion of time followed",
        y = "Density")+
@@ -4509,7 +4781,7 @@ w3_locs <- read_csv("./STIC_uaa/w32.csv")%>%
   select(ID, POINT_X, POINT_Y)
 fb_locs <- read_csv("./STIC_uaa/fb2.csv") %>% 
   select(ID, POINT_X, POINT_Y)
-zz_locs <- read_csv("./STIC_uaa/zz2.csv")%>% 
+zz_locs <- read_csv("./STIC_uaa/zz1.csv")%>% 
   select(ID, POINT_X, POINT_Y)
 ```
 
@@ -4584,22 +4856,9 @@ vals_df <- bind_cols(extract(rast(flowacc_output), locs_shape),
   left_join(pks_w3, by = "ID") %>% 
   select(-wshed, -ID)
 
+w3_tpi <- extract(rast(tpi_output), locs_shape) %>% 
+  rename("tpi" = `10mdem_tpi`)
 
-
-#make list that makes pairs of sites based on topography
-
-#final output, make sure to add pk
-W3_topo_pk <- W3_uaa_ex %>% 
-  rename() %>%
-  left_join(pks_w3, by = "ID")
-FB_topo_pk <- FB_uaa_ex %>% 
-  rename("uaa" = '10mdem_flowacc') %>%
-  left_join(pks_fb, by = "ID")
-ZZ_topo_pk <- ZZ_uaa_ex %>% 
-  rename("uaa" = '10mdem_flowacc') %>%
-  left_join(pks_zz, by = "ID")
-
-rbind(W3_topo_pk, FB_topo_pk, ZZ_topo_pk) 
 ```
 
 ```{r}
@@ -5181,6 +5440,81 @@ summarized_uaa_wd <- all_uaa_wd %>%
     summarise(avg_wet_prop = mean(wetting),
               avg_dry_prop = mean(drying))
 ```
+```{r topographic-position-index}
+# fb_uaa_1m <- read_csv("./STIC_uaa/fb2.csv")
+# zz_uaa_1m <- read_csv("./STIC_uaa/zz2.csv")
+# w3_uaa_1m <- read_csv("./STIC_uaa/w32.csv")
+
+routes_w3 <- w3_tpi %>% 
+    filter(ID %in% W3_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(tpi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+routes_fb <- fb_tpi %>% 
+    filter(ID %in% FB_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(tpi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down)
+
+routes_zz <- zz_tpi %>% 
+    filter(ID %in% ZZ_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(tpi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+all_tpi_wd <- rbind(fantastic_four_wd(routes_w3, "W3"),
+                 fantastic_four_wd(routes_fb, "FB"),
+                 fantastic_four_wd(routes_zz, "ZZ")) %>% 
+  mutate("hierarchy" = "Topographic Position Index")
+
+summarized_tpi_wd <- all_tpi_wd %>% 
+  group_by(up, down, timescale, shed, hierarchy) %>%
+    summarise(avg_wet_prop = mean(wetting),
+              avg_dry_prop = mean(drying))
+
+```
+```{r topographic-wetness-index}
+routes_w3 <- w3_twi %>% 
+    filter(ID %in% W3_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(twi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+routes_fb <- fb_twi %>% 
+    filter(ID %in% FB_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(twi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down)
+
+routes_zz <- zz_twi %>% 
+    filter(ID %in% ZZ_IDs) %>% 
+  rename("up" = ID) %>%
+  arrange(desc(twi)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+all_twi_wd <- rbind(fantastic_four_wd(routes_w3, "W3"),
+                 fantastic_four_wd(routes_fb, "FB"),
+                 fantastic_four_wd(routes_zz, "ZZ")) %>% 
+  mutate("hierarchy" = "Topographic Wetness Index")
+
+summarized_twi_wd <- all_twi_wd %>% 
+  group_by(up, down, timescale, shed, hierarchy) %>%
+    summarise(avg_wet_prop = mean(wetting),
+              avg_dry_prop = mean(drying))
+```
 ##Compile all of my results so far 2
 Consolidate the gains!!
 ```{r consolidating-progress}
@@ -5189,8 +5523,9 @@ Consolidate the gains!!
 sults_so_far <- rbind(summarized_position_wd,
                       summarized_pk_wd,
                       summarized_dof_wd,
-                      summarized_uaa_wd#,
-                      #random_w3
+                      summarized_uaa_wd,
+                      summarized_tpi_wd,
+                      summarized_twi_wd
                       ) %>% ungroup() %>% 
   mutate(timescale = fct_relevel(timescale,
                               c("30mins", "hourly", "4hr", "daily")),
@@ -5200,7 +5535,9 @@ sults_so_far <- rbind(summarized_position_wd,
                                  c("Duration of Flow",
                                 "Flow Permanence",
                                 "Relative Position",
-                                "Drainage Area"))) %>% 
+                                "Drainage Area",
+                                "Topographic Position Index",
+                                "Topographic Wetness Index"))) %>% 
   pivot_longer(cols = starts_with("avg"),
                names_to = "direction",
                values_to = "prop") 
@@ -5241,7 +5578,7 @@ sults_so_far %>%
 
 possible_times <- c("30mins", "hourly", "4hr", "daily")
 
-t <- 1
+t <- 4
 sults_so_far %>% 
   filter(timescale %in% c(possible_times[t])) %>% 
   ggplot(aes(x = prop, y = after_stat(density))) +
